2008-05-10  Reiner Steib  <reiner.steib@gmx.de>

	* smerge-mode.el (smerge-command-prefix): Fix custom type.

2008-05-05  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-read-date-get-relative): Interpret lone
	weekday abbreviation as relative to today.

2008-05-01  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-info-breakpoints-custom): Don't
	throw error if no file is found.

2008-04-28  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-replace-environment-variables): Remove it.
	There is a more simple solution.
	(tramp-file-name-handler): Apply `substitute-in-file-name' w/o
	Tramp file name handlers.

2008-04-28  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-info-breakpoints-custom): Make breakpoint
	icons work for assembler, i.e. FILE.s, FILE.S (not disassembly).
	(gdb-goto-breakpoint): Likewise for visiting breakpoints.
	(gdb-assembler-custom): Be careful not to match other addresses.

2008-04-27  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-replace-environment-variables): New defun.
	(tramp-file-name-handler): Use it.

2008-04-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-hunk-header-re-unified): Allow elided line counts.
	(diff-end-of-hunk, diff-unified->context, diff-fixup-modifs)
	(diff-sanity-check-hunk): Adjust code accordingly.

2008-04-23  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-ts-active-input-buf): Move defvar to macterm.c.

2008-04-12  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-init-buffer): New function.
	(gdb-set-gud-minor-mode-existing-buffers)
	(gdb-info-breakpoints-custom, gdb-get-location)
	(gdb-set-gud-minor-mode-existing-buffers-1): Use it.
	Previously gdb-create-define-alist wasn't always run and added to
	after-save-hook.

	* progmodes/gud.el (gud-tooltip-tips): Use tooltip-event-buffer

2008-04-12  Kevin Ryde  <user42@zip.com.au>
